--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div>
-    <form action="evaluate" method="POST">
+    <form action="http://localhost:3002/evaluate" method="POST">
       <input type="hidden" id="provider" name="provider">
       <table>
         <caption>Enter Patient Demographics</caption>
