--- a/launch.html
+++ b/launch.html
@@ -5,7 +5,7 @@
     <script>
     FHIR.oauth2.authorize({
       client_id: "demo_auc_guideline_consultation_app",
-      scope: "patient/*.read openid profile"
+      scope: "patient/*.read openid profile messaging/scratchpad messaging/ui"
     });
     </script>
   </head>
