--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       <input type="submit">
     </form>
   </div>
+  <br>
+  <div id='button_panel' style='display:none'>
+    <button id="close_btn" onclick='closeApp()' style='background-color: rgb(255, 95, 95);'>Close App</button>
+    <button id="update_btn" onclick='updateApp()' style='background-color: rgb(127, 255, 95);'>Update ERH</button>
+    <button id="read_btn" onclick='readApp()' style='background-color: rgb(95, 236, 255);'>READ SCRATCHPAD</button>
+  </div>
 
   <script src="node_modules/fhirclient/build/fhir-client.js"></script>
   <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
@@ -91,6 +97,10 @@
       }
     }
 
+    function showButtons() {
+      document.getElementById('button_panel').style.display = 'block';
+    }
+
     if (typeof FHIR === 'undefined') {
       throw new Error('Unable to load the FHIR client.  Halting page load.');
     }
@@ -102,6 +112,7 @@
     FHIR.oauth2.ready()
       .then(getContext)
       .then(populateForm)
+      .then(showButtons)
       .catch(console.error);
 
     const SMART = FHIR.oauth2;
@@ -115,8 +126,6 @@
     }
 
   </script>
-
-<button onclick='closeApp()' style="background-color:rgb(190, 0, 0)">Close App</button>
 </body>
 
 </html>
