feat: improve wording for when launched in a non-smart way

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
   </div>
   <br>
 
-  <div>Current rating is:</div><div id='rating'>Calculating Rating...</div>
+  <div>Current rating is:</div><div id='rating'>Waiting for data...</div>
   <br>
-
   <div id='button_panel' style='display:none'>
     <button id="close_btn" onclick='closeApp()' style='background-color: rgb(255, 95, 95);'>Close App</button>
     <button id="update_btn" onclick='updateApp()' style='background-color: rgb(127, 255, 95);'>Update ERH</button>
