--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <br>
   <div id='button_panel' style='display:none'>
     <button id="close_btn" onclick='closeApp()' style='background-color: rgb(255, 95, 95);'>Close App</button>
-    <button id="update_btn" onclick='updateApp()' style='background-color: rgb(127, 255, 95);'>Update ERH</button>
+    <button id="update_btn" onclick='updateApp()' style='background-color: rgb(127, 255, 95);'>Update EHR</button>
   </div>
 
   <script>let module = {};</script>
